fix: sidebar content, page teaser content

--- a/_includes/_sidebar_protein_complex.html
+++ b/_includes/_sidebar_protein_complex.html
@@ -3,11 +3,11 @@
 		<h3>Key skills</h3>
 		<p>
 			<b>Open source:</b><br> 
-			
+			The development of open-source cheminformatics toolkits and software allows for shared discovery and improvements, this project aims to explore and implement open-source methods for molecular dynamics simulations.
 			<br><b>Preparing protein complexes:</b><br>
-			
+			Proteins and ligand structures must be prepared before simulation, RDKit, OpenFF, and OpenMMForcefields are used to prepare the ligand, PDBFixer was used for the protein.
 			<br><b>Running simulations:</b><br>
-			
+			OpenMM is a widely used open source molecular dynamics simulation package, used to run MD simulations of the protein-ligand complex.
 		</p>
 	</div>
 </aside>
